[loong64] Fix `MacroAssembler::branchTruncateDoubleToInt32` on LoongArch64
Categories
(Core :: JavaScript Engine: JIT, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox110 | --- | unaffected |
| firefox111 | --- | fixed |
| firefox112 | --- | fixed |
People
(Reporter: zhaojiazhong-hf, Assigned: zhaojiazhong-hf)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
dmeehan
:
approval-mozilla-beta+
|
Details | Review |
Patch in bug 1810728 wrongly implemented the MacroAssembler::branchTruncateDoubleToInt32 function for loong64 port, and need to fix it for some out-of-int32-range cases.
| Assignee | ||
Updated•3 years ago
|
| Assignee | ||
Comment 1•3 years ago
|
||
Now only out-of-int64-range values will fail, which actually should be out-of-int32-range values.
Updated•3 years ago
|
Updated•3 years ago
|
Comment 2•3 years ago
|
||
Set release status flags based on info from the regressing bug 1810728
Comment 4•3 years ago
|
||
| bugherder | ||
Comment 5•3 years ago
|
||
The patch landed in nightly and beta is affected.
:zhaojiazhong-hf, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox111towontfix.
For more information, please visit auto_nag documentation.
| Assignee | ||
Comment 6•3 years ago
|
||
Comment on attachment 9317805 [details]
Bug 1816863 - [loong64] Fix 'branchTruncateDoubleToInt32' for some out-of-int32-range cases. r=jandem
Beta/Release Uplift Approval Request
- User impact if declined: JavaScript code may go wrong on LoongArch64 platform.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This change is a fix that only affect LoongArch64 platform.
- String changes made/needed:
- Is Android affected?: No
Comment 7•3 years ago
|
||
Comment on attachment 9317805 [details]
Bug 1816863 - [loong64] Fix 'branchTruncateDoubleToInt32' for some out-of-int32-range cases. r=jandem
Approved for 111.0b3
Comment 8•3 years ago
|
||
| bugherder uplift | ||
Description
•