Bug 1816863 - [loong64] Fix 'branchTruncateDoubleToInt32' for some out-of-int32-range cases. r=jandem, a=dmeehan

Now only out-of-int64-range values will fail, which actually should be out-of-int32-range values.

Differential Revision: https://phabricator.services.mozilla.com/D169885